# cerberusrisk

./: .env.example  .gitignore  Makefile  README.md  compose.override.yml  compose.yml
api/: Dockerfile  pyproject.toml
api/src/: config.py  database.py  main.py  models.py  schemas.py  seed.py
api/src/routers/: compliance.py  portfolios.py  risk.py  risk_advanced.py  stress.py
api/src/services/: esg_service.py  gips_service.py  guidelines_service.py  market_data.py  risk_engine.py  risk_models.py  stress_testing.py
dashboard/: Dockerfile  entrypoint.sh  pyproject.toml
dashboard/src/: api.py  app.py  theme.py
dashboard/src/assets/: mermaid.js  mermaid.js.disabled  theme.css
dashboard/src/components/: __init__.py  cards.py  charts.py  comparison.py  icons.py  tables.py
dashboard/src/docs/: api-reference.md  architecture.md  compliance.md  getting-started.md  glossary.md  overview.md  risk-metrics.md  stress-testing.md
dashboard/src/pages/: analytics.py  docs.py  home.py  portfolio.py  stress.py
