[project]
name = "cerberusrisk-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.6",
    "yfinance>=0.2",
    "redis>=5.0",
    "scipy>=1.14",
]

[tool.ruff]
line-length = 100
