[project]
name = "cerberusrisk-dashboard"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dash>=2.18",
    "dash-mantine-components>=2.4",
    "dash-iconify>=0.1.2",
    "plotly>=5.24",
    "requests>=2.32",
    "pandas>=2.2",
    "gunicorn>=23.0",
]

[tool.ruff]
line-length = 100
